--- a/app/src/main/res/layout/activity_media_store_videos.xml
+++ b/app/src/main/res/layout/activity_media_store_videos.xml
@@ -2,21 +2,47 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.MediaStoreVideosActivity">
 
-        <TextView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView_video"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginVertical="5dp"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:listitem="@layout/item_videos" />
+
+        <ProgressBar
+            android:id="@+id/pb_loading_video"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Videos"
-            android:textSize="40sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+            app:layout_constraintBottom_toBottomOf="@+id/recyclerView_video"
+            app:layout_constraintEnd_toEndOf="@+id/recyclerView_video"
+            app:layout_constraintStart_toStartOf="@+id/recyclerView_video"
+            app:layout_constraintTop_toTopOf="@+id/recyclerView_video" />
+
+        <TextView
+            android:id="@+id/tv_no_video_found"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No Videos Found"
+            android:textSize="12sp"
+            android:visibility="gone"
+            app:drawableTopCompat="@drawable/ic_video_file"
+            app:layout_constraintBottom_toBottomOf="@+id/recyclerView_video"
+            app:layout_constraintEnd_toEndOf="@+id/recyclerView_video"
+            app:layout_constraintStart_toStartOf="@+id/recyclerView_video"
+            app:layout_constraintTop_toTopOf="@+id/recyclerView_video" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
